Update to major site components (v0.1)
-Added images with links.
-Changed privacy.html to include date.
-Adjusted Header under Shared_layout to make it easier to work with.
-Changed placeholder text on index.html
-Text on all pages is now Justify instead of centre.

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,15 +5,32 @@
 }
 
 
-<h1 class="display-4">Hello Eva</h1>
-<p>It was a lovely saturday morning, sunlight basking the forest in a golden glow. Through the car window, that beautiful location almost didn't resemble a death trap. Especially the lake when its water's fine reflection dared you to swim in it.</p>
-<p>Kenny, from the backseat, twitched his nose at the local map.</p>
-<p>- Are you sure we'll have enough gas to go back home later? That is a long ride! Are we there yet? (Y/N), why the flying f*k did you have to pick that place instead of, I dunno, anywhere nearer?...</p>
-<p>Adam looked at you and whispered:</p>
-<p>- He's not wearing a seatbelt, is he?</p>
-<p>You looked over your shoulder. Indeed not. But Kenny wasn't that wrong to complain about the long wait since Adam chose to take the roadway to Pinehurst, passing through Higgins Haven and therefore contouring most of the lake to get to the site you incidentally chose for the picnic. He'd do anything to avoid the slightest proximity to the cursed campsite that almost claimed your lives. You didn't object, even when Kenny begged you to. After all, that was Jason's favorite abhorrence site.</p>
-    
-    
-    
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<h1 class="display-4">This is a header</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At consectetur lorem donec massa sapien faucibus. Tortor posuere ac ut consequat semper viverra. Duis tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Sagittis purus sit amet volutpat consequat mauris nunc. Quis ipsum suspendisse ultrices gravida dictum fusce ut. Blandit massa enim nec dui nunc mattis enim ut tellus. Aliquet eget sit amet tellus cras adipiscing enim eu turpis. Id aliquet risus feugiat in. Vel pharetra vel turpis nunc eget lorem dolor sed. Fringilla ut morbi tincidunt augue interdum velit euismod in pellentesque. Nisi porta lorem mollis aliquam ut porttitor leo. Enim diam vulputate ut pharetra sit amet aliquam. Aliquam ultrices sagittis orci a scelerisque purus semper eget duis. Dolor sit amet consectetur adipiscing elit pellentesque.</p>
+<p>Massa id neque aliquam vestibulum. Egestas diam in arcu cursus euismod quis. Sodales ut eu sem integer vitae justo eget magna. Amet luctus venenatis lectus magna fringilla urna. Faucibus ornare suspendisse sed nisi lacus sed viverra. Gravida neque convallis a cras semper auctor neque. In nulla posuere sollicitudin aliquam ultrices sagittis orci. Aliquam sem fringilla ut morbi tincidunt augue. Vitae et leo duis ut diam quam nulla porttitor. Quis viverra nibh cras pulvinar mattis nunc. Platea dictumst quisque sagittis purus sit. Ut consequat semper viverra nam libero justo laoreet sit amet. Urna id volutpat lacus laoreet non curabitur gravida arcu..</p>
+<p>Mi quis hendrerit dolor magna eget est lorem ipsum dolor. Arcu non odio euismod lacinia at quis. Dignissim enim sit amet venenatis urna cursus eget. A lacus vestibulum sed arcu non odio euismod lacinia. Risus ultricies tristique nulla aliquet enim. Diam vulputate ut pharetra sit amet aliquam id. Auctor eu augue ut lectus arcu bibendum at varius. Libero volutpat sed cras ornare arcu dui vivamus. Elit sed vulputate mi sit amet mauris commodo quis. Pharetra massa massa ultricies mi quis hendrerit dolor magna. Tincidunt arcu non sodales neque sodales ut etiam sit amet. Purus sit amet luctus venenatis lectus. Duis at tellus at urna condimentum. Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna. Nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit. Orci eu lobortis elementum nibh tellus molestie nunc non blandit.</p>
 
+<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+
+<div class="InvertSvgColour">
+    <p>
+        <a href="https://store.steampowered.com/">
+            <img src="~/images/steam.png" alt="Steam icon" style="width:64px; height:64px;">
+        </a>
+        <a href="https://www.youtube.com/">
+            <img src="~/images/youtube.png" alt="YouTube icon" style="width:64px; height:64px;">
+        </a>
+        <a href="https://twitter.com/">
+            <img src="~/images/twitter.png" alt="Twitter icon" style="width:64px; height:64px;">
+        </a>
+        <a href="https://reddit.com/">
+            <img src="~/images/reddit.png" alt="Reddit icon" style="width:64px; height:64px;">
+        </a>
+        <a href="https://github.com/Aluulu/MyWebsite/">
+            <img src="~/images/github.png" alt="Github icon" style="width:64px; height:64px;">
+        </a>
+    </p>
+</div>
+<!-- https://www.flaticon.com/packs/social-media-51 -->
+<div class="attributeIcons">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
