--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -5,4 +5,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>This page is under construction as of @ViewData["TimeStamp"]..</p>
