Added video + images (v0.1.1
-Added a new page for testing full page videos
-Added an image to index.html for content being side by side

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -90,3 +90,20 @@ body {
 .attributeIcons {
     text-align: center;
 }
+
+
+/* Style the video: 100% width and height to cover the entire window */
+#myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+.testimage12 {
+    padding-top: 50px;
+    padding-right: 30px;
+    padding-bottom: 50px;
+    padding-left: 80px;
+}
