--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -12,6 +12,17 @@
 
 <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 
+<div>
+    <p>
+        <img src="~/images/800x600_Wallpaper_Blue_Sky.png" style="float: right; width:600px; height:600px; padding-left: 20px" />
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    </p>
+    <p>Massa id neque aliquam vestibulum. Egestas diam in arcu cursus euismod quis. Sodales ut eu sem integer vitae justo eget magna. Amet luctus venenatis lectus magna fringilla urna. Faucibus ornare suspendisse sed nisi lacus sed viverra. Gravida neque convallis a cras semper auctor neque. In nulla posuere sollicitudin aliquam ultrices sagittis orci. Aliquam sem fringilla ut morbi tincidunt augue. Vitae et leo duis ut diam quam nulla porttitor. Quis viverra nibh cras pulvinar mattis nunc. Platea dictumst quisque sagittis purus sit. Ut consequat semper viverra nam libero justo laoreet sit amet. Urna id volutpat lacus laoreet non curabitur gravida arcu..</p>
+    <p>Mi quis hendrerit dolor magna eget est lorem ipsum dolor. Arcu non odio euismod lacinia at quis. Dignissim enim sit amet venenatis urna cursus eget. A lacus vestibulum sed arcu non odio euismod lacinia. Risus ultricies tristique nulla aliquet enim. Diam vulputate ut pharetra sit amet aliquam id. Auctor eu augue ut lectus arcu bibendum at varius. Libero volutpat sed cras ornare arcu dui vivamus. Elit sed vulputate mi sit amet mauris commodo quis. Pharetra massa massa ultricies mi quis hendrerit dolor magna. Tincidunt arcu non sodales neque sodales ut etiam sit amet. Purus sit amet luctus venenatis lectus. Duis at tellus at urna condimentum. Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna. Nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit. Orci eu lobortis elementum nibh tellus molestie nunc non blandit.</p>
+
+</div>
+
+
 
 <div class="InvertSvgColour">
     <p>
