--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,10 @@
                             <a class="nav-link text-light" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-page="/videopage">Video</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
