Added support for videos and pictures

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -62,8 +62,8 @@ button.accept-policy {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
@@ -91,6 +91,21 @@ body {
     text-align: center;
 }
 
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
+.bg {
+    /* The image used */
+    background-image: url("img_girl.jpg");
+    /* Full height */
+    height: 100%;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 /* Style the video: 100% width and height to cover the entire window */
 #myVideo {
@@ -101,9 +116,3 @@ body {
     min-height: 100%;
 }
 
-.testimage12 {
-    padding-top: 50px;
-    padding-right: 30px;
-    padding-bottom: 50px;
-    padding-left: 80px;
-}
