--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,40 +5,39 @@
 }
 
 
+<div class="bg"></div>
+
 <h1 class="display-4">This is a header</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At consectetur lorem donec massa sapien faucibus. Tortor posuere ac ut consequat semper viverra. Duis tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Sagittis purus sit amet volutpat consequat mauris nunc. Quis ipsum suspendisse ultrices gravida dictum fusce ut. Blandit massa enim nec dui nunc mattis enim ut tellus. Aliquet eget sit amet tellus cras adipiscing enim eu turpis. Id aliquet risus feugiat in. Vel pharetra vel turpis nunc eget lorem dolor sed. Fringilla ut morbi tincidunt augue interdum velit euismod in pellentesque. Nisi porta lorem mollis aliquam ut porttitor leo. Enim diam vulputate ut pharetra sit amet aliquam. Aliquam ultrices sagittis orci a scelerisque purus semper eget duis. Dolor sit amet consectetur adipiscing elit pellentesque.</p>
+
+<p>
+    <img src="~/images/me2.jpg" style="float: right; width: 452px; height: 804px; padding-left: 20px" />
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+</p>
 <p>Massa id neque aliquam vestibulum. Egestas diam in arcu cursus euismod quis. Sodales ut eu sem integer vitae justo eget magna. Amet luctus venenatis lectus magna fringilla urna. Faucibus ornare suspendisse sed nisi lacus sed viverra. Gravida neque convallis a cras semper auctor neque. In nulla posuere sollicitudin aliquam ultrices sagittis orci. Aliquam sem fringilla ut morbi tincidunt augue. Vitae et leo duis ut diam quam nulla porttitor. Quis viverra nibh cras pulvinar mattis nunc. Platea dictumst quisque sagittis purus sit. Ut consequat semper viverra nam libero justo laoreet sit amet. Urna id volutpat lacus laoreet non curabitur gravida arcu..</p>
 <p>Mi quis hendrerit dolor magna eget est lorem ipsum dolor. Arcu non odio euismod lacinia at quis. Dignissim enim sit amet venenatis urna cursus eget. A lacus vestibulum sed arcu non odio euismod lacinia. Risus ultricies tristique nulla aliquet enim. Diam vulputate ut pharetra sit amet aliquam id. Auctor eu augue ut lectus arcu bibendum at varius. Libero volutpat sed cras ornare arcu dui vivamus. Elit sed vulputate mi sit amet mauris commodo quis. Pharetra massa massa ultricies mi quis hendrerit dolor magna. Tincidunt arcu non sodales neque sodales ut etiam sit amet. Purus sit amet luctus venenatis lectus. Duis at tellus at urna condimentum. Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna. Nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit. Orci eu lobortis elementum nibh tellus molestie nunc non blandit.</p>
 
+
+
 <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 
-<div>
-    <p>
-        <img src="~/images/800x600_Wallpaper_Blue_Sky.png" style="float: right; width:600px; height:600px; padding-left: 20px" />
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    </p>
-    <p>Massa id neque aliquam vestibulum. Egestas diam in arcu cursus euismod quis. Sodales ut eu sem integer vitae justo eget magna. Amet luctus venenatis lectus magna fringilla urna. Faucibus ornare suspendisse sed nisi lacus sed viverra. Gravida neque convallis a cras semper auctor neque. In nulla posuere sollicitudin aliquam ultrices sagittis orci. Aliquam sem fringilla ut morbi tincidunt augue. Vitae et leo duis ut diam quam nulla porttitor. Quis viverra nibh cras pulvinar mattis nunc. Platea dictumst quisque sagittis purus sit. Ut consequat semper viverra nam libero justo laoreet sit amet. Urna id volutpat lacus laoreet non curabitur gravida arcu..</p>
-    <p>Mi quis hendrerit dolor magna eget est lorem ipsum dolor. Arcu non odio euismod lacinia at quis. Dignissim enim sit amet venenatis urna cursus eget. A lacus vestibulum sed arcu non odio euismod lacinia. Risus ultricies tristique nulla aliquet enim. Diam vulputate ut pharetra sit amet aliquam id. Auctor eu augue ut lectus arcu bibendum at varius. Libero volutpat sed cras ornare arcu dui vivamus. Elit sed vulputate mi sit amet mauris commodo quis. Pharetra massa massa ultricies mi quis hendrerit dolor magna. Tincidunt arcu non sodales neque sodales ut etiam sit amet. Purus sit amet luctus venenatis lectus. Duis at tellus at urna condimentum. Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna. Nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit. Orci eu lobortis elementum nibh tellus molestie nunc non blandit.</p>
-
-</div>
 
 
 
 <div class="InvertSvgColour">
     <p>
-        <a href="https://store.steampowered.com/">
+        <a href="https://steamcommunity.com/profiles/76561198184642273/">
             <img src="~/images/steam.png" alt="Steam icon" style="width:64px; height:64px;">
         </a>
-        <a href="https://www.youtube.com/">
+        <a href="https://www.youtube.com/channel/UCR6F4uDpl-NWs5-GULFKxFg">
             <img src="~/images/youtube.png" alt="YouTube icon" style="width:64px; height:64px;">
         </a>
-        <a href="https://twitter.com/">
+        <a href="https://twitter.com/Alulcard">
             <img src="~/images/twitter.png" alt="Twitter icon" style="width:64px; height:64px;">
         </a>
-        <a href="https://reddit.com/">
+        <a href="https://www.reddit.com/user/Alulcard/">
             <img src="~/images/reddit.png" alt="Reddit icon" style="width:64px; height:64px;">
         </a>
-        <a href="https://github.com/Aluulu/MyWebsite/">
+        <a href="https://github.com/Aluulu">
             <img src="~/images/github.png" alt="Github icon" style="width:64px; height:64px;">
         </a>
     </p>
