--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,43 +4,57 @@
     ViewData["Title"] = "Home page";
 }
 
+@{
+    Layout = null; <!-- Do not use the universal reference page. This removes padding and the nav bar -->
+    <link href="/css/site.css" rel="stylesheet" type="text/css" />
+    <!-- Link to the CSS since the layout page is no longer being referenced -->
 
-<div class="bg"></div>
+}
 
-<h1 class="display-4">This is a header</h1>
+<!-- Created using https://css-tricks.com/full-page-background-video-styles/ -->
+<video playsinline autoplay muted loop poster="Thumbnail.jpg" id="bgvid">
+    <source src="thumbnail.webm" type="video/webm">
+    <source src="~/images/20210318_181306.mp4" type="video/mp4">
+</video>
 
-<p>
-    <img src="~/images/me2.jpg" style="float: right; width: 452px; height: 804px; padding-left: 20px" />
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-</p>
-<p>Massa id neque aliquam vestibulum. Egestas diam in arcu cursus euismod quis. Sodales ut eu sem integer vitae justo eget magna. Amet luctus venenatis lectus magna fringilla urna. Faucibus ornare suspendisse sed nisi lacus sed viverra. Gravida neque convallis a cras semper auctor neque. In nulla posuere sollicitudin aliquam ultrices sagittis orci. Aliquam sem fringilla ut morbi tincidunt augue. Vitae et leo duis ut diam quam nulla porttitor. Quis viverra nibh cras pulvinar mattis nunc. Platea dictumst quisque sagittis purus sit. Ut consequat semper viverra nam libero justo laoreet sit amet. Urna id volutpat lacus laoreet non curabitur gravida arcu..</p>
-<p>Mi quis hendrerit dolor magna eget est lorem ipsum dolor. Arcu non odio euismod lacinia at quis. Dignissim enim sit amet venenatis urna cursus eget. A lacus vestibulum sed arcu non odio euismod lacinia. Risus ultricies tristique nulla aliquet enim. Diam vulputate ut pharetra sit amet aliquam id. Auctor eu augue ut lectus arcu bibendum at varius. Libero volutpat sed cras ornare arcu dui vivamus. Elit sed vulputate mi sit amet mauris commodo quis. Pharetra massa massa ultricies mi quis hendrerit dolor magna. Tincidunt arcu non sodales neque sodales ut etiam sit amet. Purus sit amet luctus venenatis lectus. Duis at tellus at urna condimentum. Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna. Nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit. Orci eu lobortis elementum nibh tellus molestie nunc non blandit.</p>
-
-
-
-<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-
-
-
-
-<div class="InvertSvgColour">
-    <p>
-        <a href="https://steamcommunity.com/profiles/76561198184642273/">
-            <img src="~/images/steam.png" alt="Steam icon" style="width:64px; height:64px;">
+<!-- Text in the middle of the page -->
+<header class="viewport-header">
+    <h1>
+        <a class="nav-link text-light" asp-area="" asp-page="/AboutMe">
+            Hey! It's me!
         </a>
-        <a href="https://www.youtube.com/channel/UCR6F4uDpl-NWs5-GULFKxFg">
-            <img src="~/images/youtube.png" alt="YouTube icon" style="width:64px; height:64px;">
-        </a>
-        <a href="https://twitter.com/Alulcard">
-            <img src="~/images/twitter.png" alt="Twitter icon" style="width:64px; height:64px;">
-        </a>
-        <a href="https://www.reddit.com/user/Alulcard/">
-            <img src="~/images/reddit.png" alt="Reddit icon" style="width:64px; height:64px;">
-        </a>
-        <a href="https://github.com/Aluulu">
-            <img src="~/images/github.png" alt="Github icon" style="width:64px; height:64px;">
-        </a>
-    </p>
-</div>
-<!-- https://www.flaticon.com/packs/social-media-51 -->
-<div class="attributeIcons">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    </h1>
+</header>
+
+
+<!-- CSS for video -->
+<style>
+    video {
+        object-fit: cover;
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+    }
+
+    /* CSS for text on the video */
+    .viewport-header {
+        position: relative;
+        height: 100vh;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    a {
+        color: #ffffff;
+    }
+
+    html {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+        font-size: 150%;
+        line-height: 1.4;
+    }
+</style>
