Welcome video converted to WebM
-Converted the mp4 video to WebM because WebM is a superior format for videos.
-Removed whitespace.

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -3,29 +3,21 @@
 @{
     ViewData["Title"] = "Home page";
 }
-
 @{
     Layout = null; <!-- Do not use the universal reference page. This removes padding and the nav bar -->
     <link href="/css/site.css" rel="stylesheet" type="text/css" />
     <!-- Link to the CSS since the layout page is no longer being referenced -->
-
 }
 
 <!-- Created using https://css-tricks.com/full-page-background-video-styles/ -->
 <video playsinline autoplay muted loop poster="Thumbnail.jpg" id="bgvid">
-    <source src="thumbnail.webm" type="video/webm">
-    <source src="~/images/20210318_181306.mp4" type="video/mp4">
+    <source src="~/images/WelcomeVideo.webm" type="video/webm">
 </video>
 
 <!-- Text in the middle of the page -->
 <header class="viewport-header">
-    <h1>
-        <a class="nav-link text-light" asp-area="" asp-page="/AboutMe">
-            Hey! It's me!
-        </a>
-    </h1>
+    <h1><a class="nav-link text-light" asp-area="" asp-page="/AboutMe">Hey! It's me!</a></h1>
 </header>
-
 
 <!-- CSS for video -->
 <style>
@@ -52,6 +44,7 @@
         color: #ffffff;
     }
 
+    /* CSS for the text on the video */
     html {
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
         font-size: 150%;
