--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,6 +1,8 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -35,19 +37,19 @@ a {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  font-size: 14px;
+    font-size: 0.875em; /* Was 14px */
 }
 @media (min-width: 768px) {
   html {
-    font-size: 16px;
+    font-size: 1em; /* Was 16px */
   }
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+    border-top: 0.0625em solid #e5e5e5; /* Was 1px */
 }
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+    border-bottom: 0.0625em solid #e5e5e5; /* Was 1px */
 }
 
 .box-shadow {
@@ -72,14 +74,14 @@ body {
     /* https://uxdesign.cc/dark-mode-ui-design-the-definitive-guide-part-1-color-53dcfaea5129 */
 
     text-align: justify;
-    margin-bottom: 60px;
+    margin-bottom: 3.75em; /* Was 60px */
 }
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 3.75em; /* Vertically center the text there */ /* Was 60px */
 }
 
 .InvertSvgColour {
