--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -6,9 +6,49 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>This page is under construction as of @ViewData["TimeStamp"]..</p>
+<p>Feel free to use this website as you wish, it follow the MIT lisense meaning that this webpage's source code is open and free to use for your own projects.</p>
+<p>If you haven't already, <a href="https://github.com/Aluulu/MyWebsite">click the github link here.</a> It will bring you to this page's GitHub repository.</p>
+<p>I am open to help and suggestions, I am by no means a good web dev so please teach me <i>*insert a heart emote here or something. I dunno how web dev hearts work smh*</i></p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At consectetur lorem donec massa sapien faucibus. Tortor posuere ac ut consequat semper viverra. Duis tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Sagittis purus sit amet volutpat consequat mauris nunc. Quis ipsum suspendisse ultrices gravida dictum fusce ut. Blandit massa enim nec dui nunc mattis enim ut tellus. Aliquet eget sit amet tellus cras adipiscing enim eu turpis. Id aliquet risus feugiat in. Vel pharetra vel turpis nunc eget lorem dolor sed. Fringilla ut morbi tincidunt augue interdum velit euismod in pellentesque. Nisi porta lorem mollis aliquam ut porttitor leo. Enim diam vulputate ut pharetra sit amet aliquam. Aliquam ultrices sagittis orci a scelerisque purus semper eget duis. Dolor sit amet consectetur adipiscing elit pellentesque.</p>
-<p>Massa id neque aliquam vestibulum. Egestas diam in arcu cursus euismod quis. Sodales ut eu sem integer vitae justo eget magna. Amet luctus venenatis lectus magna fringilla urna. Faucibus ornare suspendisse sed nisi lacus sed viverra. Gravida neque convallis a cras semper auctor neque. In nulla posuere sollicitudin aliquam ultrices sagittis orci. Aliquam sem fringilla ut morbi tincidunt augue. Vitae et leo duis ut diam quam nulla porttitor. Quis viverra nibh cras pulvinar mattis nunc. Platea dictumst quisque sagittis purus sit. Ut consequat semper viverra nam libero justo laoreet sit amet. Urna id volutpat lacus laoreet non curabitur gravida arcu..</p>
-<p>Mi quis hendrerit dolor magna eget est lorem ipsum dolor. Arcu non odio euismod lacinia at quis. Dignissim enim sit amet venenatis urna cursus eget. A lacus vestibulum sed arcu non odio euismod lacinia. Risus ultricies tristique nulla aliquet enim. Diam vulputate ut pharetra sit amet aliquam id. Auctor eu augue ut lectus arcu bibendum at varius. Libero volutpat sed cras ornare arcu dui vivamus. Elit sed vulputate mi sit amet mauris commodo quis. Pharetra massa massa ultricies mi quis hendrerit dolor magna. Tincidunt arcu non sodales neque sodales ut etiam sit amet. Purus sit amet luctus venenatis lectus. Duis at tellus at urna condimentum. Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna. Nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit. Orci eu lobortis elementum nibh tellus molestie nunc non blandit.</p>
+<style>
+    #License {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+        font-size: 80%;
+        line-height: 1.4;
+        font-style: italic;
+        background-color: #616161;
+    }
+</style>
+
+<div id="License">
+    <p>
+        MIT License
+    </p>
+    <p>
+        Copyright (c) 2021 Callum Wellard
+    </p>
+    <p>
+        Permission is hereby granted, free of charge, to any person obtaining a copy
+        of this software and associated documentation files (the "Software"), to deal
+        in the Software without restriction, including without limitation the rights
+        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+        copies of the Software, and to permit persons to whom the Software is
+        furnished to do so, subject to the following conditions:
+    </p>
+    <p>
+        The above copyright notice and this permission notice shall be included in all
+        copies or substantial portions of the Software.
+    </p>
+    <p>
+        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+        SOFTWARE.
+    </p>
+</div>
+<p>Want to learn more about MIT Licenses? Check out <a href="https://choosealicense.com/licenses/mit/">ChooseALicense.com.</a></p>
 
 <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
