Added pictures in Pictures.cshtml
-Added 6 pictures as March 2021.

--- a/Pages/Pictures.cshtml
+++ b/Pages/Pictures.cshtml
@@ -31,13 +31,19 @@
         display: none;
         overflow: hidden;
         background-color: #616161;
+        text-align: center;
     }
 </style>
 
 <p>A Collapsible:</p>
-<button type="button" class="collapsible">Open Collapsible</button>
+<button type="button" class="collapsible">March 2021</button>
 <div class="content">
-    <img src="~/images/PicturesOfMyself/20210322_074911.jpg" alt="me icon" />
+    <img src="~/images/PicturesOfMyself/Resized/2021_March_1.jpg" alt="me icon" style="width:306px; height:643px" ; />
+    <img src="~/images/PicturesOfMyself/Resized/2021_March_2.jpg" alt="me icon" style="width:306px; height:643px" ; />
+    <img src="~/images/PicturesOfMyself/Resized/2021_March_3.jpg" alt="me icon" style="width:306px; height:643px" ; />
+    <img src="~/images/PicturesOfMyself/Resized/2021_March_4.jpg" alt="me icon" style="width:306px; height:643px" ; />
+    <img src="~/images/PicturesOfMyself/Resized/2021_March_5.jpg" alt="me icon" style="width:306px; height:643px" ; />
+    <img src="~/images/PicturesOfMyself/Resized/2021_March_6.jpg" alt="me icon" style="width:306px; height:643px" ; />
 </div>
 
 <p>Collapsible Set:</p>
