Added styling to text and moved css to site.css
-Added styling to content of the page
-Moved css from inside .cshtml to .css
-Fixed SPAG in privacy.cshtml
-Changed the colour of hyperlinks
-Added internal css to index.cshtml

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -40,7 +40,14 @@
     }
 
     /* Colour of the text in the middle */
+    /* Kept white to look good */
     a {
+        color: #ffffff;
+    }
+
+    /* mouse over link  */
+    /* Kept white to look good */
+    a:hover {
         color: #ffffff;
     }
 
