Created Documents page
-Created new page Documents.cshtml & Documents.cshtml.cs
-Added Documents to the header navbar
-Changed .footer to be on one line

--- a/Pages/Pictures.cshtml
+++ b/Pages/Pictures.cshtml
@@ -3,12 +3,7 @@
 @{
     ViewData["Title"] = "Pictures";
 }
-<style>
-    .footer {
-        position: relative;
-    }
-    /* Makes the footer stay at the bottom of the page when the scroll bar appears */
-</style>
+<style>.footer {position: relative;}</style> <!-- Makes the footer stay at the bottom of the page when the scroll bar appears -->
 
 <h1>Pictures of me!</h1>
 <p>Here are a few pictures of myself, they are sorted by Year, and then sorted by Month.</p>
